# Papilio-Loader

./: .gitattributes  .gitignore  BF_Loader.bat  BF_Loader_with_reset.bat  Logic_Analyzer_xc3s250e.svf  PWM_Control.svf  Readme.txt  bf_loader.sh  linux-installer.sh  make-linux-package.sh
Fpga/: README.txt  bscan_spi.vhd  bscan_spi_spartan6.vhd  constraints_s3e_vq100.ucf
Helper_App/: ASCIITable_Quickstart-Papilio_One_250K.bit  Install_to_Sendto.bat  Pap_Loader.sh  Papilio_Loader.bat  Papilio_Loader.sh  Papilio_Programmer-FlashOnly.bat  Papilio_Programmer-FlashOnly.sh  Papilio_Programmer.bat  Papilio_Programmer.sh  Quickstart-Papilio_One_250K-v1.5.bit  Quickstart-Papilio_One_500K-v1.5.bit  (+3 more)
Program/: Makefile.am  README  autogen.sh  bitfile.cpp  bitfile.h  bscan_spi.bit  butterfly.cpp  configure.ac  devicedb.cpp  devicedb.h  devlist.h  iobase.cpp  ioftdi.cpp  ioftdi.h  jtag.cpp  jtag.h  progalgspi.cpp  progalgspi.h  progalgxc3s.cpp  progalgxc3s.h  tools.cpp  tools.h
Program/Release/: papilio-prog
papilio-prog/: .gitignore  54-papilio-board.rules  Makefile.am  Makefile.msys  Quickstart-Papilio_One_LX9-v1.5.bit  README  README.msys  autogen.sh  bitfile.cpp  bitfile.h  bscan_spi_lx45_csg324.bit  bscan_spi_lx9_csg324.bit  bscan_spi_lx9_qfp144.bit  bscan_spi_xc3s250e.bit  bscan_spi_xc6slx4.bit  bscan_spi_xc6slx9.bit  butterfly.cpp  config.h  configure.ac  devicedb.cpp  devicedb.h  devlist.h  io_exception.h  iobase.cpp  iobase.h  ioftdi.cpp  ioftdi.h  jtag.cpp  jtag.h  makezip  papilio-prog  progalgspi.cpp  progalgspi.h  progalgxc3s.cpp  progalgxc3s.h  tools.cpp  tools.h
(+90 files in other folders)
